--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Focus learning</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     
     <link rel="icon" type="image/png" href="logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
     <link
       rel="stylesheet"
       media="screen and (max-width: 770px)"
-      href="css/phone.css"
+      href="phone.css"
     />
 
   </head>
@@ -26,7 +26,7 @@
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="logo.png" alt="MyOnlineMeal.com" />
+        <img src="img/logo.png" alt="MyOnlineMeal.com" />
       </div>
       <div class="menu">
         <ul>
@@ -58,7 +58,7 @@
       </div>
       <div class="graphics">
         <video autoplay muted loop class="graphics">
-          <source src="vedio.mp4" type="video/mp4">
+          <source src="img/vedio.mp4" type="video/mp4">
         </video>
       </div>
     </section>
