--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <link
       rel="stylesheet"
       media="screen and (max-width: 770px)"
-      href="css/phone.css"
+      href="phone.css"
     />
   </head>
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="logo.png" alt="MyOnlineMeal.com" />
+        <img src="img/logo.png" alt="MyOnlineMeal.com" />
       </div>
       <div class="menu">
         <ul>
