--- a/index.html
+++ b/index.html
@@ -124,18 +124,35 @@
     </div>
   </div>
 </div>
-    <footer>
-        <div class="touch">
-          <h3>
-           <a href="contact.html">GET IN TOUCH</a> <br> <br>
-          </h3>
-          <h5>
-            Comsats University <br> Islamabad <br> +923184864610
-          </h5>
-        </div>
-      <div class="center">
-        Copyright &copy; www.Focuslearning.com. All rights reserved!
-      </div>
-    </footer>
+<footer>
+  <div class="fmenu">
+<div class="flogo">
+<img src="img/logo.png" alt="">
+</div>
+<div class="fcourses">
+<h3>
+Useful Links
+</h3>
+<div class="link">
+<ul>
+<li class="item"><a href="index.html">Home</a></li>
+<li class="item"><a href="courses.html">Courses</a></li>
+<li class="item"><a href="about.html">About</a></li>
+<li class="item"><a href="contact.html">Contact Us</a></li>
+</ul>
+</div>
+</div>
+<div class="fcontact">
+<h3>
+GET IN TOUCH
+</h3>
+<div> Comsats University <br> Islamabad <br> +923184864610
+</div>
+</div>
+  </div>
+  <div class="right">
+    Copyright &copy; www.Focuslearning.com. All rights reserved!
+  </div>
+</footer>
   </body>
 </html>
