--- a/about.html
+++ b/about.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 1170px)"
+      media="screen and (max-width: 770px)"
       href="phone.css"
     />
   </head>
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="img/logo.png" alt="MyOnlineMeal.com" />
+        <img src="img/logo.png" alt="Focuslearning" />
       </div>
       <div class="menu">
         <ul>
