--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="img/logo.png" alt="MyOnlineMeal.com" />
+        <img src="img/logo.png" alt="Focuslearning" />
       </div>
       <div class="menu">
         <ul>
