--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
     <div class="cbg">
       <nav id="navbar">
         <div id="logo">
-          <img src="img/logo.png" alt="MyOnlineMeal.com" />
+          <img src="img/logo.png" alt="Focuslearning" />
         </div>
         <div class="menu">
           <ul>
