--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="img/logo.png" alt="MyOnlineMeal.com" />
+        <img src="img/logo.png" alt="Focuslearning" />
       </div>
       <div class="menu">
         <ul>
