--- a/index.html
+++ b/index.html
@@ -142,11 +142,27 @@ Useful Links
 </ul>
 </div>
 </div>
+<div class="resources">
+<h3>
+Resources
+</h3>
+<div class="link">
+<ul>
+<li class="item"><a href="index.html">What’s New</a></li>
+<li class="item"><a href="courses.html">Recommendations</a></li>
+<li class="item"><a href="about.html">Translation Project</a></li>
+<li class="item"><a href="contact.html">FAQ</a></li>
+</ul>
+</div>
+</div>
 <div class="fcontact">
 <h3>
 GET IN TOUCH
 </h3>
 <div> Comsats University <br> Islamabad <br> +923184864610
+</div>
+<div class="flogos">
+<img src="img/social icons.png" alt="">
 </div>
 </div>
   </div>
@@ -154,5 +170,5 @@ GET IN TOUCH
     Copyright &copy; www.Focuslearning.com. All rights reserved!
   </div>
 </footer>
-  </body>
+</body>
 </html>
