--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ GET IN TOUCH
 <div> Comsats University <br> Islamabad <br> +923184864610
 </div>
 <div class="flogos">
-<img src="img/social icons.png" alt="">
+  <img src="img/social.png" alt="">
 </div>
 </div>
   </div>
