--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
 <div> Comsats University <br> Islamabad <br> +923184864610
 </div>
 <div class="flogos">
-  <img src="img/social icons.png" alt="">
+  <img src="img/social.png" alt="">
 </div>
 </div>
       </div>
