--- a/about.html
+++ b/about.html
@@ -13,24 +13,30 @@
     />
   </head>
   <body>
-    <nav id="navbar">
-      <div id="logo">
-        <img src="img/logo.png" alt="Focuslearning" />
+    <div class="navbarbg">
+      <div class="contain">
+      <nav id="navbar">
+         <div id="logo">
+               <img src="img/logo.png" alt="Focuslearning" />
+            </div>
+            <div class="menu">
+               <ul>
+                  <li class="item"><a href="index.html">Home</a></li>
+                  <li class="item"><a href="courses.html">Courses</a></li>
+                  <li class="item"><a href="about.html">About</a></li>
+                  <li class="item"><a href="contact.html">Contact Us</a></li>
+               </ul>
+            </div>
+        
+      </nav>
       </div>
-      <div class="menu">
-        <ul>
-          <li class="item"><a href="index.html">Home</a></li>
-          <li class="item"><a href="courses.html">Courses</a></li>
-          <li class="item"><a href="about.html">About</a></li>
-          <li class="item"><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </nav>
+   </div>
+
     <div class="aboutus">
       <div id="aboutcon">
-        <h1>Welcome to Focus Learning Academy!</h1>
+        <h1>Welcome to Grade up Tuition!</h1>
         <p><br><br>
-          At Focus Learning Academy, we believe that education is the key to
+          At Grade up Tuition, we believe that education is the key to
           unlocking each individual's potential and achieving personal and
           professional success. We are committed to providing a supportive and
           nurturing learning environment that empowers our students to excel
@@ -55,7 +61,7 @@
         </p>
 
         <p>
-          At Focus Learning Academy, we believe that education extends beyond
+          At Grade up Tuition, we believe that education extends beyond
           the boundaries of textbooks and exams. We are committed to providing a
           well-rounded education that encompasses not only academic excellence
           but also the development of character, values, and essential life
@@ -74,7 +80,7 @@
         </p>
 
         <p>
-          At Focus Learning Academy, we believe that education is a partnership
+          At Grade up Tuition, we believe that education is a partnership
           between the academy, students, parents, and the community. We foster
           open communication and encourage active involvement from parents to
           create a collaborative learning environment. We provide regular
@@ -92,58 +98,62 @@
         </p>
 
         <p id="last">
-          Thank you for considering Focus Learning Academy as your educational
+          Thank you for considering Grade up Tuition as your educational
           partner. We invite you to join our community and embark on an
           inspiring educational journey where every student can thrive, succeed,
           and realize their full potential.
         </p><br><br><br><br><br>
       </div>
     </div>
-    <footer>
-      <div class="fmenu">
-<div class="flogo">
-<img src="img/logo.png" alt="">
-</div>
-<div class="fcourses">
-  <h3>
-    Useful Links
-  </h3>
-<div class="link">
-  <ul>
-    <li class="item"><a href="index.html">Home</a></li>
-    <li class="item"><a href="courses.html">Courses</a></li>
-    <li class="item"><a href="about.html">About</a></li>
-    <li class="item"><a href="contact.html">Contact Us</a></li>
-  </ul>
-</div>
-</div>
-<div class="resources">
-  <h3>
-    Resources
-  </h3>
-<div class="link">
-  <ul>
-    <li class="item"><a href="index.html">What’s New</a></li>
-    <li class="item"><a href="courses.html">Recommendations</a></li>
-    <li class="item"><a href="about.html">Translation Project</a></li>
-    <li class="item"><a href="contact.html">FAQ</a></li>
-  </ul>
-</div>
-</div>
-<div class="fcontact">
-<h3>
-  GET IN TOUCH
-</h3>
-<div> Comsats University <br> Islamabad <br> +923184864610
-</div>
-<div class="flogos">
-  <img  src="img/social.png" alt="">
-</div>
-</div>
+    <div class="footerbg">
+      <div class="contain">
+      <footer>
+         <div class="fmenu">
+            <div class="flogo">
+               <img src="img/logo.png" alt="">
+            </div>
+            <div class="fcourses">
+               <h3>
+                  Useful Links
+               </h3>
+               <div class="link">
+                  <ul>
+                     <li class="item"><a href="index.html">Home</a></li>
+                     <li class="item"><a href="courses.html">Courses</a></li>
+                     <li class="item"><a href="about.html">About</a></li>
+                     <li class="item"><a href="contact.html">Contact Us</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="resources">
+               <h3>
+                  Resources
+               </h3>
+               <div class="link">
+                  <ul>
+                     <li class="item"><a href="index.html">What’s New</a></li>
+                     <li class="item"><a href="courses.html">Recommendations</a></li>
+                     <li class="item"><a href="about.html">Translation Project</a></li>
+                     <li class="item"><a href="contact.html">FAQ</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="fcontact">
+               <h3>
+                  GET IN TOUCH
+               </h3>
+               <div> Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
+            </div>
+         </div>
+         <div class="flogos">
+            <img  src="img/social.png" alt="">
+         </div>
+         <div class="right">
+            Copyright &copy; www.gradeuptuition.co.uk All rights reserved!
+         </div>
+      </footer>
       </div>
-      <div class="right">
-        Copyright &copy; www.Focuslearning.com. All rights reserved!
       </div>
-    </footer>
-  </body>
+   </div>
+   </body>
 </html>
