--- a/contact.html
+++ b/contact.html
@@ -14,19 +14,25 @@
     />
   </head>
   <body>
-    <nav id="navbar">
-      <div id="logo">
-        <img src="img/logo.png" alt="Focuslearning" />
+    <div class="navbarbg">
+      <div class="contain">
+      <nav id="navbar">
+         <div id="logo">
+               <img src="img/logo.png" alt="Focuslearning" />
+            </div>
+            <div class="menu">
+               <ul>
+                  <li class="item"><a href="index.html">Home</a></li>
+                  <li class="item"><a href="courses.html">Courses</a></li>
+                  <li class="item"><a href="about.html">About</a></li>
+                  <li class="item"><a href="contact.html">Contact Us</a></li>
+               </ul>
+            </div>
+        
+      </nav>
       </div>
-      <div class="menu">
-        <ul>
-          <li class="item"><a href="index.html">Home</a></li>
-          <li class="item"><a href="courses.html">Courses</a></li>
-          <li class="item"><a href="about.html">About </a></li>
-          <li class="item"><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </nav>
+   </div>
+
     <div class="m-contact">
       <div class="info">
         <h1>Contact Us</h1>
@@ -41,7 +47,7 @@
           </div>
           <div class="adcontent">
             <h6>Address</h6>
-            <h3>Comsats University Raiwind Road LHR</h3>
+            <h3>Hale Barns, Altrincham, Greater Manchester </h3>
           </div>
         </div>
         <div class="call">
@@ -50,7 +56,8 @@
           </div>
           <div class="call-c">
             <h5>Call Us</h5>
-            <h3>+923184864610</h3>
+            <h3>+447597037140</h3>
+
           </div>
         </div>
         <div class="email">
@@ -59,7 +66,7 @@
           </div>
           <div class="c-email">
             <h5>Email Us</h5>
-            <h3 >info@focusleaningacademy.co.uk</h3>
+            <h3 >usmanghani@gradeuptuition.co.uk</h3>
           </div>
         </div>
       </div>
@@ -105,9 +112,9 @@
     </div>
     <div class="map">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.4139761978913!2d74.21005917394517!3d31.402718474268045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3918ffd0bc7c5f71%3A0x879e9b82857bcd94!2sCOMSATS%20University%20Lahore!5e0!3m2!1sen!2s!4v1686418963327!5m2!1sen!2s"
-        width="100%"
-        height="450"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2380.875896281112!2d-2.310823024570809!3d53.36337592345077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487a532a1bdcefd9%3A0xa430d143a9f287b4!2sLongacres%20Rd%2C%20Hale%20Barns%2C%20Altrincham%20WA15%200RS%2C%20UK!5e0!3m2!1sen!2s!4v1722884026581!5m2!1sen!2s" 
+       width="100%" 
+      height="450"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
@@ -115,51 +122,55 @@
       ></iframe>
     </div>
 
-    <footer>
-      <div class="fmenu">
-<div class="flogo">
-<img src="img/logo.png" alt="">
-</div>
-<div class="fcourses">
-  <h3>
-    Useful Links
-  </h3>
-<div class="link">
-  <ul>
-    <li class="item"><a href="index.html">Home</a></li>
-    <li class="item"><a href="courses.html">Courses</a></li>
-    <li class="item"><a href="about.html">About</a></li>
-    <li class="item"><a href="contact.html">Contact Us</a></li>
-  </ul>
-</div>
-</div>
-<div class="resources">
-  <h3>
-    Resources
-  </h3>
-<div class="link">
-  <ul>
-    <li class="item"><a href="index.html">What’s New</a></li>
-    <li class="item"><a href="courses.html">Recommendations</a></li>
-    <li class="item"><a href="about.html">Translation Project</a></li>
-    <li class="item"><a href="contact.html">FAQ</a></li>
-  </ul>
-</div>
-</div>
-<div class="fcontact">
-<h3>
-  GET IN TOUCH
-</h3>
-<div> Comsats University <br> Islamabad <br> +923184864610
-</div>
-<div class="flogos">
-  <img  src="img/social.png" alt="">
-</div>
-</div>
+    <div class="footerbg">
+      <div class="contain">
+      <footer>
+         <div class="fmenu">
+            <div class="flogo">
+               <img src="img/logo.png" alt="">
+            </div>
+            <div class="fcourses">
+               <h3>
+                  Useful Links
+               </h3>
+               <div class="link">
+                  <ul>
+                     <li class="item"><a href="index.html">Home</a></li>
+                     <li class="item"><a href="courses.html">Courses</a></li>
+                     <li class="item"><a href="about.html">About</a></li>
+                     <li class="item"><a href="contact.html">Contact Us</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="resources">
+               <h3>
+                  Resources
+               </h3>
+               <div class="link">
+                  <ul>
+                     <li class="item"><a href="index.html">What’s New</a></li>
+                     <li class="item"><a href="courses.html">Recommendations</a></li>
+                     <li class="item"><a href="about.html">Translation Project</a></li>
+                     <li class="item"><a href="contact.html">FAQ</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="fcontact">
+               <h3>
+                  GET IN TOUCH
+               </h3>
+               <div> Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
+            </div>
+         </div>
+         <div class="flogos">
+            <img  src="img/social.png" alt="">
+         </div>
+         <div class="right">
+            Copyright &copy; www.gradeuptuition.co.uk All rights reserved!
+         </div>
+      </footer>
       </div>
-      <div class="right">
-        Copyright &copy; www.Focuslearning.com. All rights reserved!
       </div>
-    </footer>
-  </body>
+   </div>
+   </body>
 </html>
