--- a/courses.html
+++ b/courses.html
@@ -14,19 +14,25 @@
   </head>
   <body>
     <div class="cbg">
-      <nav id="navbar">
-        <div id="logo">
-          <img src="img/logo.png" alt="Focuslearning" />
+      <div class="navbarbg">
+        <div class="contain">
+        <nav id="navbar">
+           <div id="logo">
+                 <img src="img/logo.png" alt="Focuslearning" />
+              </div>
+              <div class="menu">
+                 <ul>
+                    <li class="item"><a href="index.html">Home</a></li>
+                    <li class="item"><a href="courses.html">Courses</a></li>
+                    <li class="item"><a href="about.html">About</a></li>
+                    <li class="item"><a href="contact.html">Contact Us</a></li>
+                 </ul>
+              </div>
+          
+        </nav>
         </div>
-        <div class="menu">
-          <ul>
-            <li class="item"><a href="index.html">Home</a></li>
-            <li class="item"><a href="courses.html">Courses</a></li>
-            <li class="item"><a href="about.html">About</a></li>
-            <li class="item"><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </div>
-      </nav>
+     </div>
+  
       <div class="courses">
         <div class="c-content">
           <div>
@@ -100,51 +106,55 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div class="fmenu">
-<div class="flogo">
-<img src="img/logo.png" alt="">
-</div>
-<div class="fcourses">
-  <h3>
-    Useful Links
-  </h3>
-<div class="link">
-  <ul>
-    <li class="item"><a href="index.html">Home</a></li>
-    <li class="item"><a href="courses.html">Courses</a></li>
-    <li class="item"><a href="about.html">About</a></li>
-    <li class="item"><a href="contact.html">Contact Us</a></li>
-  </ul>
-</div>
-</div>
-<div class="resources">
-  <h3>
-    Resources
-  </h3>
-<div class="link">
-  <ul>
-    <li class="item"><a href="index.html">What’s New</a></li>
-    <li class="item"><a href="courses.html">Recommendations</a></li>
-    <li class="item"><a href="about.html">Translation Project</a></li>
-    <li class="item"><a href="contact.html">FAQ</a></li>
-  </ul>
-</div>
-</div>
-<div class="fcontact">
-<h3>
-  GET IN TOUCH
-</h3>
-<div> Comsats University <br> Islamabad <br> +923184864610
-</div>
-<div class="flogos">
-  <img  src="img/social.png" alt="">
-</div>
-</div>
+    <div class="footerbg">
+      <div class="contain">
+      <footer>
+         <div class="fmenu">
+            <div class="flogo">
+               <img src="img/logo.png" alt="">
+            </div>
+            <div class="fcourses">
+               <h3>
+                  Useful Links
+               </h3>
+               <div class="link">
+                  <ul>
+                     <li class="item"><a href="index.html">Home</a></li>
+                     <li class="item"><a href="courses.html">Courses</a></li>
+                     <li class="item"><a href="about.html">About</a></li>
+                     <li class="item"><a href="contact.html">Contact Us</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="resources">
+               <h3>
+                  Resources
+               </h3>
+               <div class="link">
+                  <ul>
+                     <li class="item"><a href="index.html">What’s New</a></li>
+                     <li class="item"><a href="courses.html">Recommendations</a></li>
+                     <li class="item"><a href="about.html">Translation Project</a></li>
+                     <li class="item"><a href="contact.html">FAQ</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="fcontact">
+               <h3>
+                  GET IN TOUCH
+               </h3>
+               <div> Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
+            </div>
+         </div>
+         <div class="flogos">
+            <img  src="img/social.png" alt="">
+         </div>
+         <div class="right">
+            Copyright &copy; www.gradeuptuition.co.uk All rights reserved!
+         </div>
+      </footer>
       </div>
-      <div class="right">
-        Copyright &copy; www.Focuslearning.com. All rights reserved!
       </div>
-    </footer>
-  </body>
+   </div>
+   </body>
 </html>
