--- a/courses.html
+++ b/courses.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <link
       rel="stylesheet"
       media="screen and (max-width: 770px)"
@@ -13,7 +15,6 @@
     />
   </head>
   <body>
-    <div class="cbg">
       <div class="navbarbg">
         <div class="contain">
         <nav id="navbar">
@@ -32,7 +33,9 @@
         </nav>
         </div>
      </div>
-  
+     <div class="cbg">
+      <div class="contain">
+      
       <div class="courses">
         <div class="c-content">
           <div>
@@ -54,7 +57,8 @@
         <div class="c-graphics"></div>
       </div>
     </div>
-
+    </div>
+<div class="contain">
     <div class="c-content2">
       <div class="cimg">
         <img src="img/course.jpg" alt="" />
@@ -106,55 +110,53 @@
         </div>
       </div>
     </div>
-    <div class="footerbg">
-      <div class="contain">
-      <footer>
-         <div class="fmenu">
-            <div class="flogo">
-               <img src="img/logo.png" alt="">
+  </div>
+
+  <footer>
+    <div class="footer-container">
+        <div class="footer-boxes">
+            <div class="footer-box">
+                <div class="flogo">
+                    <img src="img/logo.png" alt="Logo">
+                </div>
+                <div class="fcourses">
+                    <h3>Useful Links</h3>
+                    <div class="link">
+                        <ul>
+                            <li class="item"><a href="index.html">Home</a></li>
+                            <li class="item"><a href="courses.html">Courses</a></li>
+                            <li class="item"><a href="about.html">About</a></li>
+                            <li class="item"><a href="contact.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="resources">
+                    <h3>Resources</h3>
+                    <div class="link">
+                        <ul>
+                            <li class="item"><a href="index.html">What’s New</a></li>
+                            <li class="item"><a href="courses.html">Recommendations</a></li>
+                            <li class="item"><a href="about.html">Translation Project</a></li>
+                            <li class="item"><a href="contact.html">FAQ</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="fcontact">
+                    <h3>GET IN TOUCH</h3>
+                    <div>Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
+                </div>
             </div>
-            <div class="fcourses">
-               <h3>
-                  Useful Links
-               </h3>
-               <div class="link">
-                  <ul>
-                     <li class="item"><a href="index.html">Home</a></li>
-                     <li class="item"><a href="courses.html">Courses</a></li>
-                     <li class="item"><a href="about.html">About</a></li>
-                     <li class="item"><a href="contact.html">Contact Us</a></li>
-                  </ul>
-               </div>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <div class="resources">
-               <h3>
-                  Resources
-               </h3>
-               <div class="link">
-                  <ul>
-                     <li class="item"><a href="index.html">What’s New</a></li>
-                     <li class="item"><a href="courses.html">Recommendations</a></li>
-                     <li class="item"><a href="about.html">Translation Project</a></li>
-                     <li class="item"><a href="contact.html">FAQ</a></li>
-                  </ul>
-               </div>
-            </div>
-            <div class="fcontact">
-               <h3>
-                  GET IN TOUCH
-               </h3>
-               <div> Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
-            </div>
-         </div>
-         <div class="flogos">
-            <img  src="img/social.png" alt="">
-         </div>
-         <div class="right">
+        </div>
+        <div class="reserved-rights">
             Copyright &copy; www.gradeuptuition.co.uk All rights reserved!
-         </div>
-      </footer>
-      </div>
-      </div>
-   </div>
+        </div>
+    </div>
+</footer> 
+
    </body>
 </html>
