--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       <link rel="icon" type="image/png" href="logo.png" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link
+         href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Rubik&display=swap"
+         rel="stylesheet"
+         />
       <link
          href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Rubik&display=swap"
          rel="stylesheet"
@@ -140,55 +145,51 @@
       </div>
       </div>
    </div>
-   <div class="footerbg">
-      <div class="contain">
-      <footer>
-         <div class="fmenu">
-            <div class="flogo">
-               <img src="img/logo.png" alt="">
-            </div>
-            <div class="fcourses">
-               <h3>
-                  Useful Links
-               </h3>
-               <div class="link">
-                  <ul>
-                     <li class="item"><a href="index.html">Home</a></li>
-                     <li class="item"><a href="courses.html">Courses</a></li>
-                     <li class="item"><a href="about.html">About</a></li>
-                     <li class="item"><a href="contact.html">Contact Us</a></li>
-                  </ul>
-               </div>
-            </div>
-            <div class="resources">
-               <h3>
-                  Resources
-               </h3>
-               <div class="link">
-                  <ul>
-                     <li class="item"><a href="index.html">What’s New</a></li>
-                     <li class="item"><a href="courses.html">Recommendations</a></li>
-                     <li class="item"><a href="about.html">Translation Project</a></li>
-                     <li class="item"><a href="contact.html">FAQ</a></li>
-                  </ul>
-               </div>
-            </div>
-            <div class="fcontact">
-               <h3>
-                  GET IN TOUCH
-               </h3>
-               <div> Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
-            </div>
-         </div>
-         <div class="flogos">
-            <img  src="img/social.png" alt="">
-         </div>
-         <div class="right">
-            Copyright &copy; www.gradeuptuition.co.uk All rights reserved!
-         </div>
-      </footer>
-      </div>
-      </div>
-   </div>
+                       <footer>
+                <div class="footer-container">
+                    <div class="footer-boxes">
+                        <div class="footer-box">
+                            <div class="flogo">
+                                <img src="img/logo.png" alt="Logo">
+                            </div>
+                            <div class="fcourses">
+                                <h3>Useful Links</h3>
+                                <div class="link">
+                                    <ul>
+                                        <li class="item"><a href="index.html">Home</a></li>
+                                        <li class="item"><a href="courses.html">Courses</a></li>
+                                        <li class="item"><a href="about.html">About</a></li>
+                                        <li class="item"><a href="contact.html">Contact Us</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="resources">
+                                <h3>Resources</h3>
+                                <div class="link">
+                                    <ul>
+                                        <li class="item"><a href="index.html">What’s New</a></li>
+                                        <li class="item"><a href="courses.html">Recommendations</a></li>
+                                        <li class="item"><a href="about.html">Translation Project</a></li>
+                                        <li class="item"><a href="contact.html">FAQ</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="fcontact">
+                                <h3>GET IN TOUCH</h3>
+                                <div>Gradeup <br> Tuition <br> +447597037140 <br> usmanghani@gradeuptuition.co.uk</div>
+                            </div>
+                        </div>
+                        <div class="social-icons">
+                            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </div>
+                    </div>
+                    <div class="reserved-rights">
+                        Copyright &copy; www.gradeuptuition.co.uk All rights reserved!
+                    </div>
+                </div>
+            </footer> 
+      
    </body>
 </html>
